--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/iconify": "2.2.1",
     "@vueuse/components": "^8.4.2",
     "@vueuse/core": "^8.4.2",
     "@vueuse/head": "^0.7.6",
@@ -16,13 +17,20 @@
     "notyf": "^3.10.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-i18n": "9.2.0-beta.35",
+    "vue-router": "^4.0.13",
+    "vue3-apexcharts": "1.4.1"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/he": "^1.1.2",
     "@types/node": "^17.0.31",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "cross-env": "^7.0.3",
+    "postcss-html": "1.4.1",
+    "postcss-scss": "4.0.4",
+    "rollup-plugin-purgecss": "^4.1.3",
     "sass": "1.50.1",
     "sass-loader": "12.6.0",
     "tsconfig-paths": "^4.0.0",
