--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/he": "^1.1.2",
     "@types/node": "^17.0.31",
     "@types/nprogress": "^0.2.0",
+    "@unocss/preset-wind": "^0.34.1",
     "@vitejs/plugin-vue": "^2.3.1",
     "cross-env": "^7.0.3",
     "postcss-html": "1.4.1",
@@ -35,6 +36,7 @@
     "sass-loader": "12.6.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.5.4",
+    "unocss": "^0.34.1",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.7",
     "vite-imagetools": "^4.0.3",
