--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue3-apexcharts": "1.4.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.19",
+    "@iconify-json/ri": "^1.1.2",
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/he": "^1.1.2",
     "@types/node": "^17.0.36",
@@ -37,6 +39,7 @@
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.2",
     "unocss": "^0.34.1",
+    "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.9",
     "vite-imagetools": "^4.0.3",
