--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "he": "^1.2.0",
     "notyf": "^3.10.0",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.36",
+    "vue": "^3.2.37",
     "vue-i18n": "9.2.0-beta.35",
     "vue-router": "^4.0.15",
     "vue3-apexcharts": "1.4.1"
   },
   "devDependencies": {
+    "@iconify-json/ic": "^1.1.4",
     "@iconify-json/mdi": "^1.1.19",
     "@iconify-json/ri": "^1.1.2",
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/he": "^1.1.2",
-    "@types/node": "^17.0.38",
+    "@types/node": "^17.0.40",
     "@types/nprogress": "^0.2.0",
     "@unocss/preset-wind": "^0.34.1",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -37,7 +38,7 @@
     "sass": "1.50.1",
     "sass-loader": "12.6.0",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.3",
     "unocss": "^0.34.1",
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.6",
@@ -47,6 +48,6 @@
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-pages": "^0.23.0",
     "vite-plugin-purge-icons": "^0.8.1",
-    "vue-tsc": "^0.34.17"
+    "vue-tsc": "^0.36.1"
   }
 }
