--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@vueuse/head": "^0.7.6",
     "@vueuse/router": "^8.6.0",
     "he": "^1.2.0",
+    "jsbarcode": "^3.11.5",
     "notyf": "^3.10.0",
     "nprogress": "^0.2.0",
+    "qrcode-vue3": "^1.4.17",
     "vue": "^3.2.37",
     "vue-i18n": "9.2.0-beta.35",
     "vue-router": "^4.0.15",
