--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.1.4",
+    "@iconify-json/material-symbols": "^1.1.3",
     "@iconify-json/mdi": "^1.1.19",
+    "@iconify-json/ph": "^1.1.1",
     "@iconify-json/ri": "^1.1.2",
     "@intlify/vite-plugin-vue-i18n": "3.4.0",
     "@types/he": "^1.1.2",
